chore: fix index filters shift

--- a/polaris-react/src/components/Filters/components/SearchField/SearchField.scss
+++ b/polaris-react/src/components/Filters/components/SearchField/SearchField.scss
@@ -3,7 +3,7 @@
 .SearchField {
   position: relative;
   display: flex;
-  padding-block: calc(var(--p-space-1_5-experimental) * 0.5);
+  padding-block: calc(var(--p-space-1) * 0.25);
   margin-left: var(--p-space-05);
 }
 
