--- a/polaris-react/src/components/IndexFilters/IndexFilters.scss
+++ b/polaris-react/src/components/IndexFilters/IndexFilters.scss
@@ -5,6 +5,10 @@ $spinner-size: 20px;
 
 .IndexFiltersWrapper {
   width: 100%;
+
+  [class*='Button-Button'] {
+    display: flex;
+  }
 }
 
 @media #{$p-breakpoints-sm-up} {
